# cryptoai-trader

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
agents/: CLAUDE.md  coordinator.py  fundamental.py  risk.py  sentiment.py  technical.py
api/: CLAUDE.md  main.py
backtest/: CLAUDE.md
dashboard/: CLAUDE.md
data/: CLAUDE.md  bars.py  hdf5_keys.py  historical.py  kraken.py
database/: CLAUDE.md  models.py  schemas.py  session.py
database/migrations/: env.py
database/migrations/versions/: 9f7cc2db4f7c_initial_schema.py  (+1 more)
docs/: architecture.md  strategy.md
execution/: CLAUDE.md  live.py  paper.py
notifications/: CLAUDE.md  __init__.py  discretionary.py  formatter.py  reviewer_state.py  telegram.py  types.py
research/: seam.py
research/features/: mp_engine.py  volatility.py
research/labels/: __init__.py  barriers.py  config.py  filters.py  pipeline.py  storage.py
research/validation/: __init__.py  config.py  cpcv.py  cv.py  purge.py  splitters.py
research/weights/: __init__.py  attribution.py  bootstrap.py  concurrency.py  config.py  decay.py  pipeline.py  storage.py
scripts/: setup.sh  test.sh
tests/: conftest.py  test_import_boundary.py
tests/data/: test_bars.py  test_hdf5_keys.py
tests/notifications/: test_discretionary.py  test_reviewer_state.py  test_telegram.py
tests/research/: test_seam.py
tests/research/labels/: test_barriers.py  (+7 more)
tests/unit/: test_coordinator.py  test_historical.py  test_kraken.py  test_risk.py  test_technical.py
(+16 files in other folders)
